// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeeklyContribution Matches snapshot 1`] = `
<div
  className="sc-gtssRu bNMwbf"
>
  <div
    className="sc-bdnylx hxrzrv"
  />
  <div
    className="sc-bdnylx hxrzrv"
  />
  <div
    className="sc-bdnylx hxrzrv"
  />
  <div
    className="sc-bdnylx hxrzrv"
  />
  <div
    className="sc-bdnylx hxrzrv"
  />
  <div
    className="sc-bdnylx hxrzrv"
  />
  <div
    className="sc-bdnylx hxrzrv"
  />
</div>
`;

exports[`WeeklyContribution when it receives contributions Matches snapshot 1`] = `
<div
  className="sc-dlnjPT kwtNWV"
>
  <div
    className="sc-gtssRu bNMwbf"
  >
    <div
      className="sc-bdnylx cVODbZ"
    />
    <div
      className="sc-bdnylx cVODbZ"
    />
    <div
      className="sc-bdnylx goVZGp"
    />
    <div
      className="sc-bdnylx goVZGp"
    />
    <div
      className="sc-bdnylx goVZGp"
    />
    <div
      className="sc-bdnylx hmaMxF"
    />
    <div
      className="sc-bdnylx hmaMxF"
    />
  </div>
  <div
    className="sc-gtssRu bNMwbf"
  >
    <div
      className="sc-bdnylx hmaMxF"
    />
    <div
      className="sc-bdnylx fLwzJh"
    />
    <div
      className="sc-bdnylx fLwzJh"
    />
    <div
      className="sc-bdnylx fLwzJh"
    />
    <div
      className="sc-bdnylx fLwzJh"
    />
    <div
      className="sc-bdnylx fLwzJh"
    />
    <div
      className="sc-bdnylx fLwzJh"
    />
  </div>
  <div
    className="sc-gtssRu bNMwbf"
  >
    <div
      className="sc-bdnylx fLwzJh"
    />
  </div>
</div>
`;

exports[`WeeklyContribution when it receives null contributions Matches snapshot 1`] = `
<div
  className="sc-dlnjPT kwtNWV"
/>
`;

exports[`WeeklyContribution when receive empty contributions Matches snapshot 1`] = `
<div
  className="sc-dlnjPT kwtNWV"
/>
`;
